Font fix
Potential fix for Roboto font not showing on prodcution page

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ header::after{
      position: relative;
 } */ 
 
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
   margin: 0;
@@ -334,7 +334,7 @@ header nav a {
   padding-right: 10px;
   padding-left: 10px;
   padding-bottom: 10px;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
@@ -459,7 +459,7 @@ nav img{
   padding: 0;
   font-size: 62px;
   justify-content: center;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
 }
 
